<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">

    <group
        android:id="@+id/group1"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_provincia"
            android:icon="@drawable/ic_menu_provincia"
            android:title="@string/menu_provincia" />
    </group>

    <group
        android:id="@+id/group2"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_favorito"
            android:icon="@drawable/ic_menu_food_favorite"
            android:title="@string/menu_platos" />
    </group>

    <group
        android:id="@+id/group3"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_admin"
            android:icon="@drawable/ic_menu_administrador"
            android:title="@string/menu_administrador" />
    </group>

    <group
        android:id="@+id/group4"
        android:checkableBehavior="single">
        <item
            android:id="@+id/nav_logout"
            android:icon="@drawable/ic_menu_logout"
            android:title="@string/menu_cerrar_sesion" />
    </group>

</menu>