<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".RegistrarseActivity">

    <ImageView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:src="@drawable/comidavariada"
        android:scaleType="centerCrop"/>

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:fillViewport="true">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="#D8000000"
            android:gravity="center"
            android:orientation="vertical">


            <de.hdodenhof.circleimageview.CircleImageView
                android:id="@+id/imageView"
                android:layout_width="160dp"
                android:layout_height="160dp"
                android:layout_marginTop="60dp"
                android:src="@drawable/logo_app"
                app:civ_border_color="@color/color_primario"
                app:civ_border_width="3dp" />

            <EditText
                android:id="@+id/emailEditext"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:ems="10"
                android:hint="@string/hint_email"
                android:inputType="textEmailAddress"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/imageView" />

            <EditText
                android:id="@+id/contrasenaEditext"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="50dp"
                android:ems="10"
                android:hint="@string/hint_contrasena"
                android:inputType="textPassword"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.497"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/emailEditext" />

            <Button
                android:id="@+id/btnAcceder"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="110dp"
                android:backgroundTint="@color/color_secundario"
                android:text="@string/boton_acceder"
                android:background="@drawable/btn_boton_inicar"
                android:textColor="@color/white"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.504"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contrasenaEditext" />

            <Button
                android:id="@+id/btnCancel"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:layout_marginTop="10dp"
                android:backgroundTint="@color/color_primario"
                android:text="@string/boton_cancelar"
                android:background="@drawable/btn_boton_inicar"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnAcceder" />

            <TextView
                android:id="@+id/textViewRespuesta"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:textColor="@color/color_error"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/contrasenaEditext" />

            <TextView
                android:id="@+id/recuperarContrasena"
                android:layout_width="300dp"
                android:layout_height="wrap_content"
                android:text="@string/olvido_contrasena"
                android:textAlignment="center"
                android:textColor="@color/color_letra"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/btnCancel" />

        </LinearLayout>
    </ScrollView>


</RelativeLayout>