<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/admin"
    tools:context=".Administrador.AgregarPlatosAdminFragment">


    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintVertical_bias="1.0">

        <androidx.constraintlayout.widget.ConstraintLayout
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:orientation="vertical">

            <Button
                android:id="@+id/btncancelarPlato"
                android:layout_width="126dp"
                android:layout_height="50dp"
                android:background="@color/color_secundario"
                android:text="@string/boton_cancelar"
                app:layout_constraintBottom_toBottomOf="parent"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.615"
                app:layout_constraintStart_toEndOf="@+id/btnSubirPlato"
                app:layout_constraintTop_toBottomOf="@+id/descripcionPlato"
                app:layout_constraintVertical_bias="1.0" />

            <EditText
                android:id="@+id/nombreProvincia"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginTop="68dp"
                android:background="@color/color_bandera2"
                android:textColor="@color/color_secundario"
                android:ems="10"
                android:hint="@string/hint_provincia"
                android:inputType="textPersonName"
                android:textColorHint="@color/color_secundario"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/textView5" />

            <TextView
                android:id="@+id/textView5"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginTop="64dp"
                android:background="@color/black"
                android:fontFamily="@font/finserifdisplay_italic"
                android:text="@string/admin6"
                android:textColor="@color/color_primario"
                android:textSize="25dp"
                android:typeface="serif"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.559"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toTopOf="parent" />

            <EditText
                android:id="@+id/nombrePlato"
                android:layout_width="300dp"
                android:layout_height="35dp"
                android:layout_marginTop="40dp"
                android:background="@color/color_bandera2"
                android:ems="10"
                android:textColor="@color/color_secundario"
                android:hint="@string/hint_nombre_plato"
                android:inputType="textPersonName"
                android:textColorHint="@color/color_secundario"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.495"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nombreProvincia" />

            <Button
                android:id="@+id/btnSubirPlato"
                android:layout_width="141dp"
                android:layout_height="54dp"
                android:layout_marginTop="20dp"
                android:background="@color/color_primario"
                android:text="@string/boton_subir_plato"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.177"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/descripcionPlato" />

            <ImageView
                android:id="@+id/fotoPlato"
                android:layout_width="205dp"
                android:layout_height="168dp"
                android:layout_marginTop="48dp"
                android:background="@color/color_fondo3"
                android:src="@drawable/ic_menu_food_favorite"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.456"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/nombrePlato" />

            <EditText
                android:id="@+id/descripcionPlato"
                android:layout_width="331dp"
                android:layout_height="127dp"
                android:layout_marginTop="16dp"
                android:background="@color/color_bandera2"
                android:ems="10"
                android:gravity="start|top"
                android:inputType="textMultiLine"
                android:textColor="@color/color_secundario"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintStart_toStartOf="parent"
                app:layout_constraintTop_toBottomOf="@+id/fotoPlato" />

            <ProgressBar
                android:id="@+id/progressBarLoad"
                style="?android:attr/progressBarStyle"
                android:layout_width="86dp"
                android:layout_height="77dp"
                android:visibility="gone"
                app:layout_constraintBottom_toBottomOf="@+id/fotoPlato"
                app:layout_constraintEnd_toEndOf="@+id/fotoPlato"
                app:layout_constraintStart_toStartOf="@+id/fotoPlato"
                app:layout_constraintTop_toTopOf="@+id/fotoPlato" />
        </androidx.constraintlayout.widget.ConstraintLayout>
    </ScrollView>

</androidx.constraintlayout.widget.ConstraintLayout>